--- a/UIs/nGhost.ui
+++ b/UIs/nGhost.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>271</width>
-    <height>329</height>
+    <width>273</width>
+    <height>313</height>
    </rect>
   </property>
   <property name="font">
@@ -28,23 +28,32 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout_4">
+   <layout class="QGridLayout" name="gridLayout_7">
     <property name="margin">
      <number>4</number>
     </property>
     <item row="2" column="0">
      <widget class="QGroupBox" name="groupBox">
       <property name="title">
-       <string>Thickness Damp Rotation</string>
+       <string>Thickness: ghost &amp;&amp; signal</string>
       </property>
       <layout class="QGridLayout" name="gridLayout">
        <property name="margin">
-        <number>4</number>
+        <number>0</number>
        </property>
-       <item row="0" column="1">
-        <widget class="QDoubleSpinBox" name="damp">
-         <property name="singleStep">
-          <double>0.100000000000000</double>
+       <item row="0" column="0">
+        <widget class="QDoubleSpinBox" name="thicknessGhost">
+         <property name="suffix">
+          <string> [px]</string>
+         </property>
+         <property name="decimals">
+          <number>3</number>
+         </property>
+         <property name="minimum">
+          <double>0.000000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>999.990000000000009</double>
          </property>
          <property name="value">
           <double>1.000000000000000</double>
@@ -54,7 +63,7 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="0">
+       <item row="0" column="1">
         <widget class="QDoubleSpinBox" name="thickness">
          <property name="suffix">
           <string> [px]</string>
@@ -79,10 +88,23 @@
       </layout>
      </widget>
     </item>
+    <item row="4" column="0">
+     <spacer name="verticalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>151</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
     <item row="1" column="0">
      <widget class="QGroupBox" name="carrierBox">
       <property name="title">
-       <string>Ghost: interfringe, angle and weight</string>
+       <string>Ghost:Interfringe, angle and weight</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_3" columnstretch="1,0,0">
        <property name="margin">
@@ -122,7 +144,7 @@
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
          <property name="suffix">
-          <string> ˚</string>
+          <string>˚</string>
          </property>
          <property name="decimals">
           <number>2</number>
@@ -172,6 +194,72 @@
       </layout>
      </widget>
     </item>
+    <item row="0" column="0">
+     <widget class="QGroupBox" name="groupBox_14">
+      <property name="title">
+       <string>Images: Reference &amp;&amp; Shot</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_5">
+       <property name="margin">
+        <number>4</number>
+       </property>
+       <item row="1" column="0">
+        <widget class="QComboBox" name="shot">
+         <property name="toolTip">
+          <string>Shot</string>
+         </property>
+         <property name="neutrinoImage" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QGroupBox" name="groupBox_2">
+      <property name="title">
+       <string>Rotation and weight</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_4">
+       <property name="margin">
+        <number>0</number>
+       </property>
+       <item row="0" column="0">
+        <widget class="QDoubleSpinBox" name="rotation">
+         <property name="suffix">
+          <string>˚</string>
+         </property>
+         <property name="decimals">
+          <number>3</number>
+         </property>
+         <property name="minimum">
+          <double>-360.000000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>360.000000000000000</double>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QDoubleSpinBox" name="weight">
+         <property name="maximum">
+          <double>9.990000000000000</double>
+         </property>
+         <property name="singleStep">
+          <double>0.200000000000000</double>
+         </property>
+         <property name="value">
+          <double>1.000000000000000</double>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
     <item row="5" column="0">
      <widget class="QWidget" name="widget_3" native="true">
       <layout class="QGridLayout" name="gridLayout_2">
@@ -207,94 +295,6 @@
         </widget>
        </item>
       </layout>
-     </widget>
-    </item>
-    <item row="0" column="0">
-     <widget class="QGroupBox" name="groupBox_14">
-      <property name="title">
-       <string>Images: Reference &amp;&amp; Shot</string>
-      </property>
-      <layout class="QGridLayout" name="gridLayout_5">
-       <property name="margin">
-        <number>4</number>
-       </property>
-       <item row="1" column="0">
-        <widget class="QComboBox" name="shot">
-         <property name="toolTip">
-          <string>Shot</string>
-         </property>
-         <property name="neutrinoImage" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-    </item>
-    <item row="4" column="0">
-     <spacer name="verticalSpacer_2">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>151</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="3" column="0">
-     <widget class="QGroupBox" name="groupBox_2">
-      <property name="title">
-       <string>Rotation and weight</string>
-      </property>
-      <layout class="QGridLayout" name="gridLayout_6">
-       <property name="margin">
-        <number>4</number>
-       </property>
-       <item row="1" column="1">
-        <widget class="QDoubleSpinBox" name="rotation">
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-         </property>
-         <property name="suffix">
-          <string> ˚</string>
-         </property>
-         <property name="decimals">
-          <number>2</number>
-         </property>
-         <property name="minimum">
-          <double>-360.000000000000000</double>
-         </property>
-         <property name="maximum">
-          <double>360.000000000000000</double>
-         </property>
-         <property name="singleStep">
-          <double>1.000000000000000</double>
-         </property>
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="2">
-        <widget class="QDoubleSpinBox" name="weight">
-         <property name="singleStep">
-          <double>0.100000000000000</double>
-         </property>
-         <property name="value">
-          <double>1.000000000000000</double>
-         </property>
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-      </layout>
-      <zorder>damp</zorder>
-      <zorder>rotation</zorder>
-      <zorder>weight</zorder>
      </widget>
     </item>
    </layout>
@@ -372,6 +372,18 @@
    </property>
   </action>
  </widget>
+ <tabstops>
+  <tabstop>shot</tabstop>
+  <tabstop>widthCarrier</tabstop>
+  <tabstop>angleCarrier</tabstop>
+  <tabstop>weightCarrier</tabstop>
+  <tabstop>thicknessGhost</tabstop>
+  <tabstop>thickness</tabstop>
+  <tabstop>rotation</tabstop>
+  <tabstop>weight</tabstop>
+  <tabstop>doGhost</tabstop>
+  <tabstop>erasePrevious</tabstop>
+ </tabstops>
  <resources>
   <include location="../resources/neutrino.qrc"/>
  </resources>
