--- a/UIs/nFocalSpot.ui
+++ b/UIs/nFocalSpot.ui
@@ -67,6 +67,9 @@
           <property name="maximum">
            <double>1.000000000000000</double>
           </property>
+          <property name="singleStep">
+           <double>0.010000000000000</double>
+          </property>
           <property name="value">
            <double>0.500000000000000</double>
           </property>
@@ -84,6 +87,9 @@
           </property>
           <property name="maximum">
            <double>999999999.000000000000000</double>
+          </property>
+          <property name="singleStep">
+           <double>0.010000000000000</double>
           </property>
           <property name="neutrinoSave" stdset="0">
            <bool>true</bool>
@@ -659,7 +665,13 @@
     </item>
    </layout>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QStatusBar" name="statusBar">
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
