--- a/UIs/nRegionPath.ui
+++ b/UIs/nRegionPath.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>204</width>
-    <height>140</height>
+    <height>161</height>
    </rect>
   </property>
   <property name="font">
@@ -25,7 +25,7 @@
    <property name="layoutDirection">
     <enum>Qt::LeftToRight</enum>
    </property>
-   <layout class="QGridLayout" name="gridLayout">
+   <layout class="QGridLayout" name="gridLayout" columnstretch="1,1">
     <item row="1" column="0" colspan="2">
      <widget class="QComboBox" name="defaultValue">
       <property name="neutrinoSave" stdset="0">
@@ -58,7 +58,7 @@
       </item>
      </widget>
     </item>
-    <item row="2" column="0">
+    <item row="3" column="0">
      <widget class="QPushButton" name="doIt">
       <property name="font">
        <font>
@@ -70,7 +70,7 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="1">
+    <item row="3" column="1">
      <widget class="QPushButton" name="doMask">
       <property name="font">
        <font>
@@ -94,6 +94,20 @@
       </property>
       <property name="neutrinoImage" stdset="0">
        <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QCheckBox" name="crop">
+      <property name="text">
+       <string>Crop</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QCheckBox" name="negative">
+      <property name="text">
+       <string>Negative</string>
       </property>
      </widget>
     </item>
